--- a/Day_27/rain_maker.css
+++ b/Day_27/rain_maker.css
@@ -104,14 +104,17 @@ body{
 	border-bottom-left-radius: 100px;
 	border-bottom-right-radius: 100px;
 	box-shadow: 1px 2px 2px 0px #a6a6a6;
-	position: absolute;
-	top :100px;
-	left: 30px;
+	position: relative;
+	z-index: 30px;
+	
     -webkit-transform: rotate(-45deg);
        -moz-transform: rotate(-45deg);
         -ms-transform: rotate(-45deg);
          -o-transform: rotate(-45deg);
             transform: rotate(-45deg);
+
+
+
 }
 
 .heart {
