--- a/homepage.css
+++ b/homepage.css
@@ -28,6 +28,14 @@
 	margin: 0em;
 
 	}
+#profile_pic{
+	float: right;
+	position: absolute;
+	top:100px;
+	right: 80px;
+	height:100px;
+	width:100px;
+}
 
 #nav {
 	text-align: center;
