--- a/Day_66/alien_attack.css
+++ b/Day_66/alien_attack.css
@@ -9,11 +9,13 @@ body{
 #score{
 	position: absolute;
 	float: left;
+	top: 0;
+	left: 0;
 	padding:  20px;
 	font-size:20px;
 	color:#D66E05;
+} 
 
-}
 #info{
 	height:100px;
 	width: 600px;
@@ -24,6 +26,24 @@ body{
 	position: relative;
 	margin: 0px auto;
 }
+#game_over{
+	display: none;
+	padding: 30px;
+	height: 100px;
+	width: 400px;
+	background-color: rgba(0,0,0,0.4);
+	color: #6390FF;
+	position: relative;
+	margin: 200px auto;
+	text-align: center;
+}
+
+#game_over a{
+	text-decoration: none;
+	color: #D66E05;
+	font-size: 20px;
+}
+
 #canvas{
 	position: absolute;
 	top:0;
@@ -32,6 +52,7 @@ body{
 	bottom:0;
 	background-color: #040420;
 	z-index: -1;
+	cursor: none;
 }
 
 footer{
@@ -43,6 +64,7 @@ footer{
 	right: 0px;
 	width: 100%;
 }
+
 #links_container{
 	float: right;
 	padding-right: 30px;
